test/libyul/yulSyntaxTests/literal_invalid_type.yul
{
    let x := true:unhappy
}
// ----
// TypeError 5473: (15-27): "unhappy" is not a valid type (user defined types are not yet supported).
// TypeError 5170: (15-27): Invalid type "unhappy" for literal "true".
// TypeError 3947: (10-11): Assigning value of type "unhappy" to variable of type "".
